exports[`invalid(1): {\n\t\"scripts\": {\n\t\t\"preinstall\": \"node ./scripts/setup.js\"\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"scripts": {
  3 | 		"preinstall": "node ./scripts/setup.js"
  4 | 	}
  5 | }

`;

exports[`invalid(1): {\n\t\"scripts\": {\n\t\t\"preinstall\": \"node ./scripts/setup.js\"\n\t}\n} 2`] = `

Message:
  1 | {
  2 | 	"scripts": {
> 3 | 		"preinstall": "node ./scripts/setup.js"
    | 		^^^^^^^^^^^^ The \`preinstall\` install script runs automatically on install and is a supply-chain risk.
  4 | 	}
  5 | }

Suggestion 1/1: Remove the \`preinstall\` script.:
  1 | {
  2 | 	"scripts": {}
  3 | }

`;

exports[`invalid(2): {\n\t\"scripts\": {\n\t\t\"install\": \"node-gyp rebuild\"\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"scripts": {
  3 | 		"install": "node-gyp rebuild"
  4 | 	}
  5 | }

`;

exports[`invalid(2): {\n\t\"scripts\": {\n\t\t\"install\": \"node-gyp rebuild\"\n\t}\n} 2`] = `

Message:
  1 | {
  2 | 	"scripts": {
> 3 | 		"install": "node-gyp rebuild"
    | 		^^^^^^^^^ The \`install\` install script runs automatically on install and is a supply-chain risk.
  4 | 	}
  5 | }

Suggestion 1/1: Remove the \`install\` script.:
  1 | {
  2 | 	"scripts": {}
  3 | }

`;

exports[`invalid(3): {\n\t\"scripts\": {\n\t\t\"build\": \"tsc\",\n\t\t\"postinstall\": \"node ./scripts/setup.js\"\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"scripts": {
  3 | 		"build": "tsc",
  4 | 		"postinstall": "node ./scripts/setup.js"
  5 | 	}
  6 | }

`;

exports[`invalid(3): {\n\t\"scripts\": {\n\t\t\"build\": \"tsc\",\n\t\t\"postinstall\": \"node ./scripts/setup.js\"\n\t}\n} 2`] = `

Message:
  1 | {
  2 | 	"scripts": {
  3 | 		"build": "tsc",
> 4 | 		"postinstall": "node ./scripts/setup.js"
    | 		^^^^^^^^^^^^^ The \`postinstall\` install script runs automatically on install and is a supply-chain risk.
  5 | 	}
  6 | }

Suggestion 1/1: Remove the \`postinstall\` script.:
  1 | {
  2 | 	"scripts": {
  3 | 		"build": "tsc"
  4 | 	}
  5 | }

`;
